# solr_reasoning

./: .gitignore  CONCURRENT_PROCESSING.md  MCP_USAGE_GUIDE.md  P3_TOOLS_DATA_RETRIEVAL.py  P3_together.py  README_NEW_MCP.md  agent_parser.py  background_monitor.py  batch_query_manager.py  bvbrc_p3tools_server.py  complete_tool_reference.txt  cot_template_text.txt  generate_tool_docs.py  genome_id.json  helper_functions.py  mcp_bvbrc_server.py  mcts_thinking.py  output.txt  output2.txt  output4.txt  output5.txt  p3_prompt.txt  pyproject.toml  queries.json  queries_success.json  query_state_manager.py  requirements.txt  rhea_client.py  solr-together.py  solr_superprompt.txt  solr_together.py  start_concurrent_system.py  test_rhea_client.py  test_thought_chain.py  update_p3_tools.sh
api_docs/: antibiotics.text  antibiotics.txt  bioset.txt  bioset_result.txt  enzyme_class_ref.txt  epitope.txt  epitope_assay.txt  experiment.txt  feature_sequence.txt  gene_ontology_ref.txt  genome.txt  genome_amr.txt  genome_feature.txt  genome_sequence.txt  id_ref.txt  index.txt  misc_niaid_sgc.txt  pathway.txt  pathway_ref.txt  ppi.txt  protein_family_ref.txt  protein_feature.txt  protein_structure.txt  sequence_feature.txt  sequence_feature_vt.txt  serology.txt  sp_gene.txt  sp_gene_ref.txt  spike_lineage.txt  spike_variant.txt  strain.txt  structured_assertion.txt  subsystem.txt  subsystem_ref.txt  surveillance.txt  taxonomy.txt
api_docs_original/: bioset_result.txt  epitope.txt  epitope_assay.txt  genome.txt  genome_amr.txt  genome_feature.txt  id_ref.txt  misc_niaid_sgc.txt  (+9 more)
(+37 files in other folders)
