[project]
name = "solr-reasoning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "filetype>=1.2.0",
    "mcp>=1.12.4",
    "openai>=1.99.9",
    "proxystore[all]>=0.8.2",
    "python-magic>=0.4.27",
    "redis==6.4.0",
    "together>=1.5.23",
]
